# 13MBID-Template

./: .gitignore  Entornos.md  Makefile  README.md  crear_archivo_requerimientos.bat  pyproject.toml
config/: Aclaraciones.md  Makefile  conda-linux.yaml  conda-windows.yaml  conda.yaml  generar_entorno.bat  uv_requirements.txt
data/: README.md
data/processed/: README.md
examples/: dvc.md  ejemplo-dvc.ipynb  ejemplo-mlflow.ipynb  ejemplo-reporte.ipynb  probar-entorno.ipynb
