[project]
name = "Template_13MBID"
version = "0.1.0"
description = "Repositorio template para el desarrollo de la práctica. Asignatura 13MBID."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.59.1",
    "jupyter>=1.1.1",
    "mlflow>=2.20.3",
    "numpy==2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.0",
    "ydata-profiling>=4.13.0",
]
