[project]
name = "Template_13MBID"
version = "0.1.0"
description = "Repositorio template para el desarrollo de la práctica. Asignatura 13MBID."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.59.1",
    "fastapi>=0.118.0",
    "great-expectations>=0.18.8",
    "jupyter>=1.1.1",
    "mlflow>=2.20.3",
    "notebook>=7.3.2",
    "numpy==2.1.3",
    "pandas>=2.2.3",
    "pandera>=0.26.1",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "scikit-learn>=1.6.1",
    "streamlit>=1.43.0",
    "streamlit-ace>=0.1.1",
    "ydata-profiling>=4.13.0",
]
